# fastAPI-example

./: .gitignore  README.md  pyproject.toml
